Fixes position of sub-project selector to avoid horizontal scrollbars

--- a/asset/sass/blocks/_sub-project-selector.scss
+++ b/asset/sass/blocks/_sub-project-selector.scss
@@ -7,15 +7,10 @@
         background-color: white;
         padding: 1rem;
         right: auto;
-        left: 50%;
-        transform: translate(-50%, 0);
+        left: -70%;
+        transform: translate(-70%, 0);
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
         min-width: 35rem;
-
-        @include media-breakpoint-down(lg) {
-            left: 75%;
-            transform: translate(-75%, 0);
-        }
 
         @include media-breakpoint-down(md) {
             padding: 0;
@@ -42,16 +37,10 @@
             height: 0;
             top: -10px;
             right: auto;
-            left: 50%;
-            transform: translate(-50%, 0);
+            left: 85%;
             border-left: 15px solid transparent;
             border-right: 15px solid transparent;
             border-bottom: 15px solid white;
-
-            @include media-breakpoint-down(lg) {
-                left: 70%;
-                transform: translate(-70%, 0);
-            }
 
             @include media-breakpoint-down(md) {
                 display: none;
